--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "printWidth": 80,
+  "semi": true,
+  "arrowParens": "always",
+  "bracketSpacing": true,  
+  "endOfLine": "lf"
 }
