feat(logger): implement logger module with pino integration and environment variable configuration

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,9 @@ APP_NAME= "ms-nest-screaming-architecture"
 HTTP_PORT="3000"
 NODE_ENV="development"
 ENVIRONMENT="local"
+
+#LOGGER
+LOG_LEVEL="debug"
+LOGGER_MESSAGE_KEY="msg"
+LOGGER_TARGET="pino-pretty"
+LOGGER_ERROR_KEY="error"
