feat(context-store): implement context store module with request and correlation id management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "paths": {
       "@common/*": ["./src/common/*"],
       "@config/*": ["./src/infrastructure/config/*"],
+      "@context-store/*": ["./src/infrastructure/context-store/*"],
       "@logger/*": ["./src/infrastructure/logger/*"]
     },
     "strictNullChecks": true,
