feat(health): implement health check module with memory limit configuration

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ LOG_LEVEL="debug"
 LOGGER_MESSAGE_KEY="msg"
 LOGGER_TARGET="pino-pretty"
 LOGGER_ERROR_KEY="error"
+
+#HEALTH
+HEALTH_CHECK_MEMORY_HEAP_LIMIT="1000000000" # 1GB
