feat(cache): implement redis caching module with environment variable configuration

--- a/.env.template
+++ b/.env.template
@@ -10,5 +10,11 @@ LOGGER_MESSAGE_KEY="msg"
 LOGGER_TARGET="pino-pretty"
 LOGGER_ERROR_KEY="error"
 
+#CACHE
+REDIS_PORT="6379"
+REDIS_PASSWORD="123456"
+REDIS_HOST="localhost"
+REDIS_USE_TLS="false"
+
 #HEALTH
 HEALTH_CHECK_MEMORY_HEAP_LIMIT="1000000000" # 1GB
