--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       "@common/*": ["./src/common/*"],
       "@config/*": ["./src/infrastructure/config/*"],
       "@context-store/*": ["./src/infrastructure/context-store/*"],
-      "@logger/*": ["./src/infrastructure/logger/*"]
+      "@logger/*": ["./src/infrastructure/logger/*"],
+      "@cache/*": ["./src/infrastructure/cache/*"]
     },
     "strictNullChecks": true,
     "noImplicitAny": false,
