feat(http-client): implement http client module with configurable options and service

--- a/.env.template
+++ b/.env.template
@@ -16,5 +16,11 @@ REDIS_PASSWORD="123456"
 REDIS_HOST="localhost"
 REDIS_USE_TLS="false"
 
+#HTTP CLIENT
+HTTP_CLIENT_TIMEOUT="30000"
+HTTP_CLIENT_MAX_RATE="1000"
+HTTP_CLIENT_MAX_REDIRECTS="5"
+HTTP_CLIENT_MAX_RETRIES="3"
+
 #HEALTH
 HEALTH_CHECK_MEMORY_HEAP_LIMIT="1000000000" # 1GB
