--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "dependencies": {
     "@fastify/static": "^8.2.0",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
+    "axios": "^1.11.0",
     "nestjs-cls": "^6.0.1",
     "nestjs-pino": "^4.4.0",
     "pino-http": "^10.5.0",
