feat(security): implement throttling and cors configuration with environment variables

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,17 @@ LOGGER_MESSAGE_KEY="msg"
 LOGGER_TARGET="pino-pretty"
 LOGGER_ERROR_KEY="error"
 
+#SECURITY
+#throttle
+THROTTLE_TTL="60000"
+THROTTLE_REQUESTS="10"
+THROTTLE_BLOCK_DURATION="30000"
+#cors
+CORS_ORIGIN="http://localhost:3000,http://127.0.0.1:3000"
+CORS_CREDENTIALS="true" 
+CORS_METHODS="GET,POST,PUT,DELETE,PATCH,OPTIONS"
+CORS_ALLOWED_HEADERS="Content-Type,X-Requested-With,Cache-Control,Authorization,Accept,Origin,x-correlation-id,x-request-id,x-message-id"
+
 #CACHE
 REDIS_PORT="6379"
 REDIS_PASSWORD="123456"
