--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,28 @@
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    container_name: ms-nest-screaming-app
+    ports:
+      - "3000:3000"
+      - "9229:9229"
+    environment:
+      - NODE_ENV=development
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    env_file:
+      - .env
+    volumes:
+      - ./src:/usr/src/app/src
+      - ./test:/usr/src/app/test
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - ms_nest_screaming_network
+    restart: unless-stopped
+
   redis:
     image: redis:8.0.2
     container_name: ms-nest-screaming-redis
