fix(tests): update test regex to only match unit tests

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": "(.*\\.spec|.*\\.e2e-spec)\\.ts$",
+    "testRegex": "(.*\\.spec)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
