feat(db): add db module and prisma integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,47 @@ services:
       - "3000:3000"
       - "9229:9229"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=development      
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
     env_file:
       - .env
     volumes:
       - ./src:/usr/src/app/src
+      - ./prisma:/usr/src/app/prisma
       - ./test:/usr/src/app/test
     depends_on:
+      postgres:
+        condition: service_healthy
       redis:
         condition: service_healthy
     networks:
       - ms_nest_screaming_network
     restart: unless-stopped
+
+  postgres:
+    image: postgres:17.4
+    container_name: ms-nest-screaming-postgres
+    ports:
+      - '${POSTGRES_PORT}:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    restart: unless-stopped
+    networks:
+      - ms_nest_screaming_network
+    healthcheck:
+      test: ['CMD', 'pg_isready', '-U', '${POSTGRES_USER}', '-d', '${POSTGRES_DB}']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   redis:
     image: redis:8.0.2
@@ -52,3 +79,6 @@ volumes:
   redis_data:
     driver: local
     name: ms_nest_screaming_redis_data
+  postgres_data:
+    driver: local
+    name: ms_nest_screaming_postgres_data
