--- a/.env.template
+++ b/.env.template
@@ -27,6 +27,13 @@ REDIS_PASSWORD="123456"
 REDIS_HOST="localhost"
 REDIS_USE_TLS="false"
 
+#Database
+POSTGRES_PORT="5432"
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="123456"
+POSTGRES_DB="test"
+DATABASE_URL="postgres://user:123456@localhost:5432/test?schema=public"
+
 #HTTP CLIENT
 HTTP_CLIENT_TIMEOUT="30000"
 HTTP_CLIENT_MAX_RATE="1000"
