--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./jest-e2e.json",
+    "prisma:studio": "npx prisma studio",
+    "prisma:generate": "npx prisma generate",
+    "prisma:deploy": "npx prisma migrate deploy",
+    "prisma:migrate": "npx prisma migrate dev --name",
     "prepare": "husky",
     "commit": "cz"
   },
@@ -31,6 +35,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
+    "@prisma/client": "^6.13.0",
     "axios": "^1.11.0",
     "nestjs-cls": "^6.0.1",
     "nestjs-pino": "^4.4.0",
@@ -68,6 +73,7 @@
     "jest": "^29.7.0",
     "pino-pretty": "^13.1.1",
     "prettier": "^3.4.2",
+    "prisma": "^6.13.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -94,13 +100,14 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
-      "^@root/(.*)$": "<rootDir>/$1",
+      "^@root/(.*)$": "<rootDir>/../$1",
       "^@health/(.*)$": "<rootDir>/apps/health/$1",
       "^@common/(.*)$": "<rootDir>/common/$1",
       "^@config/(.*)$": "<rootDir>/infrastructure/config/$1",
       "^@context-store/(.*)$": "<rootDir>/infrastructure/context-store/$1",
       "^@logger/(.*)$": "<rootDir>/infrastructure/logger/$1",
       "^@cache/(.*)$": "<rootDir>/infrastructure/cache/$1",
+      "^@db/(.*)$": "<rootDir>/infrastructure/db/$1",
       "^@http-client/(.*)$": "<rootDir>/infrastructure/http-client/$1",
       "^@security/(.*)$": "<rootDir>/infrastructure/security/$1"
     }
