--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,14 @@
     "isolatedModules": true,
     "baseUrl": "./",
     "paths": {
+      "@root/*": ["./*"],
       "@health/*": ["./src/apps/health/*"],
       "@common/*": ["./src/common/*"],
       "@config/*": ["./src/infrastructure/config/*"],
       "@context-store/*": ["./src/infrastructure/context-store/*"],
       "@logger/*": ["./src/infrastructure/logger/*"],
       "@cache/*": ["./src/infrastructure/cache/*"],
+      "@db/*": ["./src/infrastructure/db/*"],
       "@http-client/*": ["./src/infrastructure/http-client/*"],
       "@security/*": ["./src/infrastructure/security/*"]
     },
