feat(kafka): integrate kafka microservices with environment variable configuration

--- a/.env.template
+++ b/.env.template
@@ -40,5 +40,13 @@ HTTP_CLIENT_MAX_RATE="1000"
 HTTP_CLIENT_MAX_REDIRECTS="5"
 HTTP_CLIENT_MAX_RETRIES="3"
 
+#KAFKA
+KAFKA_CLIENT_ID="ms-nest-screaming-architecture"
+KAFKA_BROKERS="localhost:9092"
+KAFKA_CONSUMER_GROUP_ID="ms-nest-screaming-consumer"
+KAFKA_CLUSTER_ID="MkU3OEVBNTcwNTJENDM2Qk"
+KAFKA_CLIENT_PARTITIONER="default"
+KAFKA_CONSUMER_ALLOW_AUTO_TOPIC_CREATION="true"
+
 #HEALTH
 HEALTH_CHECK_MEMORY_HEAP_LIMIT="1000000000" # 1GB
