--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@cache/*": ["./src/infrastructure/cache/*"],
       "@db/*": ["./src/infrastructure/db/*"],
       "@http-client/*": ["./src/infrastructure/http-client/*"],
-      "@security/*": ["./src/infrastructure/security/*"]
+      "@security/*": ["./src/infrastructure/security/*"],
+      "@broker/*": ["./src/infrastructure/broker/*"]
     },
     "strictNullChecks": true,
     "noImplicitAny": false,
