feat(notification): implement notification module with email, sms, and push strategies

--- a/.env.template
+++ b/.env.template
@@ -50,3 +50,10 @@ KAFKA_CONSUMER_ALLOW_AUTO_TOPIC_CREATION="true"
 
 #HEALTH
 HEALTH_CHECK_MEMORY_HEAP_LIMIT="1000000000" # 1GB
+
+#MAILTRAP
+MAILTRAP_API_URL="https://api-url/send"
+MAILTRAP_INBOX_ID="inbox-id"
+MAILTRAP_API_TOKEN="api-token"
+MAILTRAP_FROM_EMAIL="hello@example.com"
+MAILTRAP_FROM_NAME="Nest Screaming Architecture Template"
