--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.13.0",
     "axios": "^1.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "kafkajs": "^2.2.4",
     "nestjs-cls": "^6.0.1",
     "nestjs-pino": "^4.4.0",
@@ -104,6 +106,7 @@
     "moduleNameMapper": {
       "^@root/(.*)$": "<rootDir>/../$1",
       "^@health/(.*)$": "<rootDir>/apps/health/$1",
+      "^@notification/(.*)$": "<rootDir>/apps/notification/$1",
       "^@common/(.*)$": "<rootDir>/common/$1",
       "^@config/(.*)$": "<rootDir>/infrastructure/config/$1",
       "^@context-store/(.*)$": "<rootDir>/infrastructure/context-store/$1",
@@ -112,7 +115,8 @@
       "^@db/(.*)$": "<rootDir>/infrastructure/db/$1",
       "^@http-client/(.*)$": "<rootDir>/infrastructure/http-client/$1",
       "^@security/(.*)$": "<rootDir>/infrastructure/security/$1",
-      "^@broker/(.*)$": "<rootDir>/infrastructure/broker/$1"
+      "^@broker/(.*)$": "<rootDir>/infrastructure/broker/$1",
+      "^@third-party/(.*)$": "<rootDir>/infrastructure/third-party/$1"
     }
   },
   "config": {
