feat(user): implement user module and features create, update, delete, and get user details

--- a/.env.template
+++ b/.env.template
@@ -57,3 +57,6 @@ MAILTRAP_INBOX_ID="inbox-id"
 MAILTRAP_API_TOKEN="api-token"
 MAILTRAP_FROM_EMAIL="hello@example.com"
 MAILTRAP_FROM_NAME="Nest Screaming Architecture Template"
+
+#USER
+USER_DETAILS_CACHE_TTL_SECONDS="3600" # 1 hour
