--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/microservices": "^11.1.6",
     "@nestjs/platform-fastify": "^11.1.5",
     "@nestjs/swagger": "^11.2.0",
@@ -106,6 +107,7 @@
     "moduleNameMapper": {
       "^@root/(.*)$": "<rootDir>/../$1",
       "^@health/(.*)$": "<rootDir>/apps/health/$1",
+      "^@user/(.*)$": "<rootDir>/apps/user/$1",
       "^@notification/(.*)$": "<rootDir>/apps/notification/$1",
       "^@common/(.*)$": "<rootDir>/common/$1",
       "^@config/(.*)$": "<rootDir>/infrastructure/config/$1",
