feat(tets): add mock environment variables for e2e testing and update import paths

--- a/package.json
+++ b/package.json
@@ -94,6 +94,22 @@
       "json",
       "ts"
     ],
+    "coveragePathIgnorePatterns": [
+      ".module.ts$",
+      "main.ts$",
+      ".mock.ts$",
+      ".dto.ts$",
+      ".enum.ts$",
+      ".constant.ts$",
+      ".type.ts$",
+      ".interface.ts$",
+      ".abstract.ts$",
+      "index.ts$",
+      ".js$",
+      ".spec.ts$",
+      ".command.ts$",
+      ".query.ts$"
+    ],
     "rootDir": "src",
     "testRegex": "(.*\\.spec)\\.ts$",
     "transform": {
