--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NestJS template for a screaming architecture project",
   "author": "willyGaleano",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "CC-BY-NC-4.0",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
